--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "homepage": "https://github.com/shazow/whatsabi#readme",
   "dependencies": {
-    "ethers": "^5.7"
+    "ethers": "^5.7",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "ts-jest": "^29"
