--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shazow/whatsabi",
-  "version": "0.3.1",
+  "version": "0.4.0-beta",
   "description": "Guess an ABI from an Ethereum contract address, even if it's unverified",
   "main": "lib/index.js",
   "directories": {
@@ -26,9 +26,15 @@
   },
   "homepage": "https://github.com/shazow/whatsabi#readme",
   "dependencies": {
-    "ethers": "^5.7"
+    "@ethersproject/abi": "^5",
+    "@ethersproject/abstract-provider": "^5",
+    "@ethersproject/address": "^5",
+    "@ethersproject/bytes": "^5",
+    "@ethersproject/hash": "^5",
+    "@ethersproject/web": "^5"
   },
   "devDependencies": {
+    "ethers": "^5",
     "ts-jest": "^29",
     "ts-node": "^10.9.1"
   }
