--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shazow/whatsabi",
-  "version": "0.4.0-beta",
+  "version": "0.4.0",
   "description": "Guess an ABI from an Ethereum contract address, even if it's unverified",
   "main": "lib/index.js",
   "directories": {
