--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shazow/whatsabi",
-  "version": "0.5.0-alpha",
+  "version": "0.5.0",
   "description": "Guess an ABI from an Ethereum contract address, even if it's unverified",
   "main": "lib/index.js",
   "directories": {
