--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,12 +2,16 @@ name: "Run Tests"
 on:
   workflow_dispatch:
 jobs:
-  tests:
+  check:
+    strategy:
+      fail-fast: true
+
+    name: "Project Tests"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Install Nix
-        uses: cachix/install-nix-action@v20
+        uses: cachix/install-nix-action@v22
       - name: Run tests
         run: nix develop -c sh -c "make test"
