--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Nix
         uses: cachix/install-nix-action@v22
+      - name: Cache
+        uses: actions/cache@v3
+        with:
+          path: ./.cache
       - name: Run tests
         run: nix develop -c sh -c "make test"
