--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,6 @@
 name: "Run Tests"
 
-on:
-  workflow_dispatch:
-  pull_request:
-    types: [opened, reopened]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   check:
