--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
   "homepage": "https://github.com/shazow/whatsabi#readme",
   "dependencies": {
     "@ethersproject/abi": "^5",
-    "@ethersproject/abstract-provider": "^5",
     "@ethersproject/address": "^5",
     "@ethersproject/bytes": "^5",
-    "@ethersproject/hash": "^5",
-    "@ethersproject/web": "^5"
+    "@ethersproject/web": "^5",
+    "@noble/hashes": "^1.3.1"
   },
   "devDependencies": {
     "ethers": "^5",
