--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./lib/",
-    "rootDir": "./src.ts",
+    "rootDir": "./src",
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
@@ -20,7 +20,7 @@
     "target": "es2022"
   },
   "include": [
-    "./src.ts/*.ts"
+    "./src/*.ts"
   ],
   "exclude": [ ]
 }
