--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,3 @@
 {
-  "compilerOptions": {
-    "outDir": "./lib/",
-    "rootDir": "./src",
-    "declaration": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "preserveSymlinks": true,
-    "preserveWatchOutput": true,
-    "pretty": false,
-    "sourceMap": true,
-    "strict": true,
-    "target": "es2022"
-  },
-  "include": [
-    "./src/*.ts"
-  ],
-  "exclude": [ ]
+  "extends": "./tsconfig.base.json"
 }
