--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@shazow/whatsabi",
-  "version": "0.7.0",
-  "description": "Guess an ABI from an Ethereum contract address, even if it's unverified",
+  "version": "0.8.0",
+  "description": "Guess an ABI from Ethereum bytecode, even if it's unverified",
   "directories": {
     "lib": "lib"
   },
