package.json: Include esm,cjs,types in pack

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "author": "Andrey Petrov <shazow.net>",
   "license": "MIT",
   "files": [
-    "lib.*",
-    "src",
+    "lib.esm/",
+    "lib.cjs/",
+    "lib.types/",
+    "src/",
     "package.json",
     "README.md",
     "LICENSE",
