--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,17 @@ jobs:
         with:
           key: api-result-cache
           path: ./.cache
-      - name: Run tests
+      - name: Run tests with ethers
         run: nix develop -c sh -c "make test"
         env:
+          PROVIDER: "ethers"
+          ONLINE: 1
+          INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
+          ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
+      - name: Run tests with viem
+        run: nix develop -c sh -c "make test"
+        env:
+          PROVIDER: "viem"
           ONLINE: 1
           INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
