--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,27 +6,21 @@ jobs:
   check:
     name: "Project Tests"
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        provider: ["ethers", "viem"]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Install Nix
-        uses: cachix/install-nix-action@v22
-      - name: Cache
-        uses: actions/cache@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - uses: actions/cache@v3
         with:
           key: api-result-cache
           path: ./.cache
-      - name: Run tests with ethers
-        run: nix develop -c sh -c "make test"
+      - run: npm ci
+      - name: Run tests with ${{ matrix.provider }}
+        run: npm test
         env:
-          PROVIDER: "ethers"
-          ONLINE: 1
-          INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
-          ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
-      - name: Run tests with viem
-        run: nix develop -c sh -c "make test"
-        env:
-          PROVIDER: "viem"
+          PROVIDER: ${{ matrix.provider }}
           ONLINE: 1
           INFURA_API_KEY: ${{ secrets.INFURA_API_KEY }}
           ETHERSCAN_API_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
