--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -7,7 +7,6 @@
     "declaration": true,
     "declarationMap": true,
     "declarationDir": "./lib.types",
-    "emitDeclarationOnly": true,
-    "moduleResolution": "node"
+    "emitDeclarationOnly": true
   }
 }
