--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "jest",
-    "build:cjs": "tsc --project tsconfig.cjs.json",
-    "build:esm": "tsc --project tsconfig.esm.json",
+    "build:cjs": "tsc --project tsconfig.cjs.json && cp package.cjs.json lib.cjs/package.json",
+    "build:esm": "tsc --project tsconfig.esm.json && cp package.esm.json lib.esm/package.json",
     "build:types": "tsc --project tsconfig.types.json"
   },
   "repository": {
