package.json: Re-order export keys because apparently ordering matters
https://publint.dev/rules#exports_types_should_be_first

--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
   "types": "./lib.types/index.d.ts",
   "exports": {
     ".": {
+      "types": "./lib.types/index.d.ts",
       "import": "./lib.esm/index.js",
-      "default": "./lib.cjs/index.js",
-      "types": "./lib.types/index.d.ts"
+      "default": "./lib.cjs/index.js"
     }
   }
 }
