--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "ethers": "^6.8.0"
   },
   "peerDependencies": {
-    "sevm": "^0.5.3",
-    "@noble/hashes": "^1"
+    "@noble/hashes": "^1",
+    "sevm": "^0.5.3"
   },
   "peerDependenciesMeta": {
     "sevm": {
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@size-limit/esbuild-why": "^8.2.6",
     "@size-limit/preset-small-lib": "^8.2.6",
+    "sevm-cli": "^0.5.1",
     "size-limit": "^8.2.6",
     "ts-node": "^10.9.1",
     "viem": "^1.16.4",
