tests: arbitrary provider via env.PROVIDER_RPC_URL

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 export INFURA_API_KEY="..."
 export ETHERSCAN_API_KEY="..."
 export PROVIDER="ethers"  # or "viem"
+
+# Use an arbitrary JSON RPC endpoint instead:
+#export PROVIDER_RPC_URL="https://ethereum-rpc.publicnode.com"
