--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        provider: ["ethers", "viem"]
+        provider: ["ethers", "viem", "web3"]
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
