--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "vitest run",
     "build:cjs": "tsc --project tsconfig.cjs.json && cp package.cjs.json lib.cjs/package.json",
     "build:esm": "tsc --project tsconfig.esm.json && cp package.esm.json lib.esm/package.json",
-    "build:types": "tsc --project tsconfig.types.json"
+    "build:types": "tsc --project tsconfig.types.json",
+		"build:docs": "typedoc"
   },
   "repository": {
     "type": "git",
