--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/shazow/whatsabi#readme",
   "dependencies": {
-    "ethers": "^6.13.4"
+    "ox": "^0.1.1"
   },
   "peerDependencies": {
     "@noble/hashes": "^1"
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@size-limit/esbuild-why": "^8.2.6",
     "@size-limit/preset-small-lib": "^8.2.6",
+    "ethers": "^6.13.4",
     "npm": "^10.9.0",
     "size-limit": "^8.2.6",
     "tsx": "^4.19.2",
